--- a/BeautyShopWebAPI/appsettings.json
+++ b/BeautyShopWebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BeautyShopDb": "Data Source=DESKTOP-2HH7UEP\\SQLEXPRESS;Initial Catalog=BeautyShopDb;Integrated Security=True;Trust Server Certificate=True"
+  }
 }
