Adding Authentication & Authorization

--- a/BeautyShopWebAPI/appsettings.json
+++ b/BeautyShopWebAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BeautyShopDb": "Data Source=DESKTOP-2HH7UEP\\SQLEXPRESS;Initial Catalog=BeautyShopDb;Integrated Security=True;Trust Server Certificate=True"
+  },
+  "Authentication": {
+    "SecretForKey": "thisisthesecretKeyforgeneratingakeyForToken1234",
+    "Issuer": "https://localhost:7213",
+    "Audience": "BeautyShopWebApi"
   }
 }
