--- a/BeautyShopInfrastructure/BeautyShopInfrastructure.csproj
+++ b/BeautyShopInfrastructure/BeautyShopInfrastructure.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BeautyShopApplication\BeautyShopApplication.csproj" />
     <ProjectReference Include="..\BeautyShopDomain\BeautyShopDomain.csproj" />
   </ItemGroup>
 
