--- a/BeautyShopWebAPI/appsettings.json
+++ b/BeautyShopWebAPI/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BeautyShopDb": "Data Source=DESKTOP-2HH7UEP\\SQLEXPRESS;Initial Catalog=BeautyShopDb;Integrated Security=True;Trust Server Certificate=True"
+    "BeautyShopDb": "Data Source=DESKTOP-2HH7UEP\\SQLEXPRESS;Initial Catalog=BeautyShopDb;Integrated Security=True;Trust Server Certificate=True",
+    "BeautyShopAuthDb": "Data Source=DESKTOP-2HH7UEP\\SQLEXPRESS;Initial Catalog=BeautyShopAuthDb;Integrated Security=True;Trust Server Certificate=True"
   },
   "Authentication": {
     "SecretForKey": "thisisthesecretKeyforgeneratingakeyForToken1234",
