--- a/BeautyShopTest/BeautyShopTest.csproj
+++ b/BeautyShopTest/BeautyShopTest.csproj
@@ -36,4 +36,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
