Fix the problem of ((Order by Final Price)) by adding a view to database

--- a/BeautyShopWebAPI/appsettings.json
+++ b/BeautyShopWebAPI/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BeautyShopDb": "Data Source=DESKTOP-2HH7UEP\\SQLEXPRESS;Initial Catalog=BeautyShopDb;Integrated Security=True;Trust Server Certificate=True",
-    "BeautyShopAuthDb": "Data Source=DESKTOP-2HH7UEP\\SQLEXPRESS;Initial Catalog=BeautyShopAuthDb;Integrated Security=True;Trust Server Certificate=True"
+    //"BeautyShopAuthDb": "Data Source=DESKTOP-2HH7UEP\\SQLEXPRESS;Initial Catalog=BeautyShopAuthDb;Integrated Security=True;Trust Server Certificate=True"
   },
   "Authentication": {
     "SecretForKey": "thisisthesecretKeyforgeneratingakeyForToken1234",
