--- a/BeautyShopWebAPI/appsettings.json
+++ b/BeautyShopWebAPI/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BeautyShopDb": "Data Source=DESKTOP-2HH7UEP\\SQLEXPRESS;Initial Catalog=BeautyShopDb;Integrated Security=True;Trust Server Certificate=True",
-    //"BeautyShopAuthDb": "Data Source=DESKTOP-2HH7UEP\\SQLEXPRESS;Initial Catalog=BeautyShopAuthDb;Integrated Security=True;Trust Server Certificate=True"
+    //"BeautyShopDb": "Data Source=192.168.62.89,1443;Initial Catalog=BeautyShopDb;Integrated Security=True;Trust Server Certificate=True",
+    "BeautyShopDb": "Server=192.168.62.89,1443;Database=BeautyShopDb;User Id=sa;Password=Ss@01441373;Integrated Security=false;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Authentication": {
     "SecretForKey": "thisisthesecretKeyforgeneratingakeyForToken1234",
