--- a/BeautyShopWebAPI/appsettings.json
+++ b/BeautyShopWebAPI/appsettings.json
@@ -1,10 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"BeautyShopDb": "Data Source=192.168.62.89,1443;Initial Catalog=BeautyShopDb;Integrated Security=True;Trust Server Certificate=True",
@@ -14,5 +8,37 @@
     "SecretForKey": "thisisthesecretKeyforgeneratingakeyForToken1234",
     "Issuer": "https://localhost:7213",
     "Audience": "BeautyShopWebApi"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "System": "Warning",
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithClientIp", "WithClientAgent" ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Level:u3} {Timestamp:o}] {ClientIp} {ClientAgent} ({SourceContext}) {Message} {NewLine}"
+        }
+      },
+
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {ClientIP}{NewLine}{Exception}",
+          "connectionString": "Server=192.168.62.89,1443;Database=BeautyShopDb;User Id=sa;Password=Ss@01441373;Integrated Security=false;TrustServerCertificate=True;MultipleActiveResultSets=true",
+          "sinkOptionsSection": {
+            "tableName": "Logs",
+            "autoCreateSqlTable": true
+          }
+        }
+      }
+    ]
   }
 }
